more features and improvements!